--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 useDynLib(causalTree, .registration = TRUE, .fixes = "C_")
 
-export(na.causalTree, path.causalTree, prune.causalTree, causalTree, causalTree.control, rsq.causalTree, snip.causalTree, xpred.causalTree, 
+export(na.causalTree, path.causalTree, prune.causalTree, causalTree, causalTree.control, snip.causalTree, xpred.causalTree, 
        estimate.causalTree, causalForest, propensityForest)
 export(causalTree.exp)  # needed for one of the tests
 export(causalTree.matrix, create.data.frame, recursive.which.in.leaf, est.causalTree) # needed for the simulations
@@ -14,7 +14,6 @@ S3method(labels, causalTree)
 S3method(meanvar, causalTree)
 S3method(model.frame, causalTree)
 S3method(plot, causalTree)
-S3method(post, causalTree)
 S3method(predict, causalTree)
 S3method(print, causalTree)
 S3method(prune, causalTree)
