--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: causalForest
 Version: 0.9.0
 Date: 2015-11-01
-Authors@R: c(person("Stefan", "Wager", role = c("aut", "cre"),
-	             email = "swager@stanford.edu"),
+Authors@R: c(person("Susan", "Athey", role = c("aut", "cre"),
+	             email = "athey@susanathey.com"),
              person("Yanyang", "Kong", role = "aut",	
 	             email = "yanyangk@stanford.edu "),
-             person("Susan", "Athey", role = c("aut", "cre"),
-	             email = "athey@susanathey.com"))
+             person("Stefan", "Wager", role = c("aut", "cre"),
+	             email = "swager@stanford.edu"))
 Description: Causal trees and forests for heterogeneous treatment effect estimation.
              This package builds on rpart 4.1-8, by Therneau, Atkinson, and Ripley (2014).
 Title: Causal Trees and Forests
