--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person("Susan", "Athey", role = c("aut", "cre"),
 	             email = "athey@susanathey.com"),
              person("Yanyang", "Kong", role = "aut",	
 	             email = "yanyangk@stanford.edu "),
-             person("Stefan", "Wager", role = c("aut", "cre"),
+             person("Stefan", "Wager", role = "aut",
 	             email = "swager@stanford.edu"))
 Description: Causal trees and forests for heterogeneous treatment effect estimation.
              This package builds on rpart 4.1-8, by Therneau, Atkinson, and Ripley (2014).
